(doc) update titlepage

--- a/doc/project_database_gafner_haenni.tex
+++ b/doc/project_database_gafner_haenni.tex
@@ -8,18 +8,19 @@
 \date{08-06-2021}
 \author{Severin Gafner \and David Hänni}
 \newdateformat{germanformat}{\THEDAY{ }\monthname[\THEMONTH], \THEYEAR}
-\newcommand{\Cmodule}{Objektorientiertes Programmieren 2}
-
+\def\Cmodule{Objektorientiertes Programmieren 2} 
+\def\Ctitle{DatationBase} 
+\def\Cschool{TEKO Schweizerische Fachschule} 
 \begin{document}
 
 \begin{titlepage}
 	\centering
 	\includegraphics[width=0.3\textwidth]{images/teko-logo-pink.jpg}\par\vspace{1cm}
-	{\scshape\LARGE TEKO Schweizerische Fachschule \par}
+	{\scshape\LARGE \Cschool\par}
 	\vspace{1cm}
 	{\scshape\Large Semesterarbeit \\ \Cmodule\par}
 	\vspace{1.5cm}
-	{\huge\bfseries Project A\par}
+	{\huge\bfseries \Ctitle\par}
 	\vspace{2cm}
 	{\Large\itshape Severin Gafner | David Hänni\par}
 	\vfill
